fix colors